--- a/resources/scss/component/_variables.scss
+++ b/resources/scss/component/_variables.scss
@@ -3,8 +3,8 @@
 $white: #fff;
 $black: #000;
 
-// ## Primary colors
-$primary: #246beb;
+// # Primary colors
+$primary: #022be9;
 $primary-0: #ffffff;
 $primary-5: #eff5ff;
 $primary-10: #d3e1fb;
@@ -19,7 +19,7 @@ $primary-90: #07152f;
 $primary-100: #000000;
 
 // # Secondary colors
-$secondary: #003675;
+$secondary: #ff5f00;
 $secondary-0: #ffffff;
 $secondary-5: #edf1f5;
 $secondary-10: #cdd7e4;
